# merchant

./: .pre-commit-config.yaml  DEVELOPMENT.md  Pipfile  README.md  assumptions.md  development.md  pyproject.toml  requirements_dev.txt  setup.cfg
src/merchant/: __main__.py  guide.py  merchants_guide.py  roman_numeral.py
tests/: test_guide.py  test_merchants_guide.py  test_roman_numeral.py
tests/samples/: input1.txt
