[metadata]
name = merchant
version = 0.0.1
description = guide to the galaxy
long_description = file: README.md
long_description_type = text/markdown
author = Stefan Eysoldt
url = https://github.com/Maraxi/merchant
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    merchant
python_requires = >=3.6
package_dir =
    =src
