[metadata]
name = merchant
version = 0.0.1
description = guide to the galaxy
long_description = file: README.md
long_description_type = text/markdown
author = Stefan Eysoldt
url = https://github.com/Maraxi/merchant
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    merchant
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
merchant = py.typed
